# moosebot

./: #npcs.json#  LICENSE  README.md  blessings.json  blessings.json~  boss_traits.json  bot.py  broken.py  characters.py  classes.py  convert_lists.py  initializer.py  items.json  items.py  main.py  names.py  npcs.json  npcs.json~  npcs_old_2.json  old_commands.py  outcome_tables.py  party.json  pyproject.toml  random_lists.py  restarter.sh  shared_functions.py  todo-2.txt  todo_old.txt  traits.json  traits.py  traits.txt  traitsold.json  unused.py  wizard.py  wizards.json  world.json
